# statix

./: .dockerignore  CMakeLists.txt  Dockerfile  StatiX.sln
StatiX/: StatiX.vcxproj  StatiX.vcxproj.filters  main.cpp
StatiX/Common/: Pool.h  Pool.inl  Queue.h  Queue.inl
StatiX/Files/: Cache.h  General.h  Pool.cpp  Pool.h  Pool.inl  Queue.cpp  Queue.h
StatiX/src/: CMakeLists.txt  index.html  main.cpp
StatiX/src/Common/: Config.cpp  Config.h  General.h  Pool.h  Pool.inl  Queue.h  Queue.inl
StatiX/src/Files/: Cache.cpp  Cache.h  FilesPool.cpp  FilesPool.h  General.h  Pool.cpp
StatiX/src/Network/: General.h  NetPool.cpp  NetPool.h  Parser.cpp  Parser.h  ServerPool.cpp  ServerPool.h  Session.cpp  Session.h
StatiX/src/Server/: Pool.cpp  Pool.h  Server.cpp  Server.h
StatiX/src/css/: main.css
StatiX/src/html/: index.html  main.html
